--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git sample</title>
     <link rel="stylesheet" href="styles.css">
+<script type="text/javascript" src="style.js"></script>  
 </head>
 <body>
+<p>Welcome to JavaScript</p>  
+<form>  
+<input type="button" value="click" onclick="msg()"/>  
+</form> 
     This is simply the body of the git sample
 </body>
 </html>
