--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git sample</title>
     <link rel="stylesheet" href="styles.css">
-<script type="text/javascript" src="style.js"></script>  
+<script type="text/javascript" src="script.js"></script>  
 </head>
 <body>
 <p>Welcome to JavaScript</p>  
