--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <form>  
 <input type="button" value="click" onclick="msg()"/>  
 </form> 
-    This is simply the body of the git sample
+    This is simply the body of the git sample by the Misty 
 </body>
 </html>
