--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <form>  
 <input type="button" value="click" onclick="msg()"/>  
 </form> 
-    This is simply the body of the git sample
+    This is simply the body of the git sample 
+    This is the line added after removed from collaborator
 </body>
 </html>
